<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp">


    <Button
        android:id="@+id/pomiaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/pomiaryText" />

    <Button
        android:id="@+id/treningiButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/treningiText" />

    <Button
        android:id="@+id/ustawieniaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/ustawieniaText" />




</LinearLayout>