<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_sample"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="?android:attr/activatedBackgroundIndicator"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#CCCCFF">

                    <TextView
                        android:id="@+id/szyja"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/szyjaText" />
                    <TextView
                        android:id="@+id/klatka"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/klatkaText" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/szyjaEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"/>

                    <EditText
                        android:id="@+id/klatkaEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"/>

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="#CCCCFF">>

                    <TextView
                        android:id="@+id/bicepsLewy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lewyBicText" />

                    <TextView
                        android:id="@+id/bicepsLewyNapiety"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lewyBicNapText" />



                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/bicepsLewyEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/bicepsLewyNapietyEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="#CCCCFF">>

                    <TextView
                        android:id="@+id/bicepsPrawy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prawyBicText" />

                    <TextView
                        android:id="@+id/bicepsPrawyNapiety"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prawyBicNapText" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/bicepsPrawyEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/bicepsPrawyNapietyEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="#CCCCFF">>

                    <TextView
                        android:id="@+id/przedramieLewe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lewePrzedramieText" />

                    <TextView
                        android:id="@+id/przedramiePrawe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prawePrzedramieText" />



                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/przedramieLeweEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/przedramiePraweEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:digits="0123456789."
                        android:ems="10"
                        android:inputType="numberDecimal" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="#CCCCFF">>

                    <TextView
                        android:id="@+id/talia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/taliaText" />

                    <TextView
                        android:id="@+id/brzuch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/brzuchText" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/taliaEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/brzuchEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="#CCCCFF">>

                    <TextView
                        android:id="@+id/udoLewe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/leweUdoText" />

                    <TextView
                        android:id="@+id/udoPrawe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/praweUdoText" />



                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">



                    <EditText
                        android:id="@+id/udoLeweEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"/>

                    <EditText
                        android:id="@+id/udoPraweEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:background="#CCCCFF">

                    <TextView
                        android:id="@+id/lydkaLewa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lewaLydkaText" />

                    <TextView
                        android:id="@+id/lydkaPrawa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prawaLydkaText" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/lydkaLewaEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/lydkaPrawaEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginRight="205sp"
                    android:background="#CCCCFF">

                    <TextView
                        android:id="@+id/biodra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/biodraText" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">



                    <EditText
                        android:id="@+id/biodraEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />
                    <Button
                        android:id="@+id/add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dodajText" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginRight="205sp"
                    android:background="#CCCCFF">

                    <TextView
                        android:id="@+id/tkankaTluszczowa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tkankaTluszczowaText" />



                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <EditText
                        android:id="@+id/tkankaTluszczowaEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:digits="0123456789."
                        android:inputType="numberDecimal" />

                    <Button
                        android:id="@+id/calculate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/obliczText" />

                </TableRow>

            </TableLayout>
        </ScrollView>


</LinearLayout>
