<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".measurements.AddingMeasurementChoiseActivity">

    <ScrollView
        android:id="@+id/main_scroll_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/mainLL"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"

                android:background="?android:attr/activatedBackgroundIndicator"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dataView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dataText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/waga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wagaText" />

                    <EditText
                        android:id="@+id/wagaEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:digits="0123456789."
                        android:ems="10"
                        android:inputType="numberDecimal" />

                </TableRow>

                <Button
                    android:id="@+id/addWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/dodajPomText"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/kolejnePomiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/chceDodacPomText" />

                <LinearLayout
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <include
                    android:id="@+id/full_sample_main"

                    layout="@layout/full_sample"
                    android:visibility="invisible">


                </include>

            </TableLayout>
        >
    </ScrollView>
</LinearLayout>